Refactor project. Include bundler. Update version